--- a/Intel.MyDeals/Client/src/app/admin/unifiedDealRecon/admin.unifiedDealRecon.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/unifiedDealRecon/admin.unifiedDealRecon.component.css
@@ -372,7 +372,7 @@ div[index="0"] {
 .unified-bulk-popup .mat-dialog-container {
     padding: 0 !important;
     border-radius: 0 !important;
-    padding-top: 25px !important;
+    /*padding-top: 25px !important;*/
     height: fit-content !important;
     overflow: hidden !important;
     width: fit-content !important;
